fix(Title bar): Fixed titlebar's z-index - now it's set to the maximum;

--- a/src/app/titlebar/titlebar.component.css
+++ b/src/app/titlebar/titlebar.component.css
@@ -10,6 +10,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 2147483647;
     width: 100%;
     -webkit-user-select: none;
     user-select: none;
